--- a/digger.yml
+++ b/digger.yml
@@ -2,5 +2,8 @@ projects:
 - name: vpc-staging
   dir: staging/us-east-1/vpc
   terragrunt: true
+- name: vpc-production
+  dir: production/us-east-1/vpc
+  terragrunt: true
 auto_merge: false
 collect_usage_data: false
