--- a/digger.yml
+++ b/digger.yml
@@ -1,9 +1,9 @@
 projects:
 - name: vpc-staging
-  dir: stage/us-east-1/vpc
+  dir: Stage/us-east-1/vpc
   terragrunt: true
 - name: vpc-production
-  dir: prod/us-east-1/vpc
+  dir: Prod/us-east-1/vpc
   terragrunt: true
 auto_merge: false
 collect_usage_data: false
