--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,29 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  TerragruntCheck:
+    runs-on: ubuntu-latest
+    steps:
+      - name: 'Checkout'
+        uses: actions/checkout@v4.1.1
+
+      - name: Check terragrunt HCL
+        uses: gruntwork-io/terragrunt-action@v1
+        with:
+          tf_version: 1.6.1
+          tg_version: 0.52.4
+          tg_dir: .
+          tg_command: 'hclfmt --terragrunt-check --terragrunt-diff'
+  tfsec:
+    name: tfsec
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Clone repo
+        uses: actions/checkout@v4.1.1
+      - name: tfsec
+        uses: aquasecurity/tfsec-action@v1.0.3
+  Digger:
     runs-on: ubuntu-latest
     permissions:    
       contents: write      # required to merge PRs
