--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,8 +52,8 @@ jobs:
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DEV_ACCOUNT_ID: ${{ secrets.STAGING_ACCOUNT_ID }}
-          DEV_ROLE: ${{ secrets.STAGING_ROLE }}
+          DEV_ACCOUNT_ID: ${{ secrets.DEV_ACCOUNT_ID }}
+          DEV_ROLE: ${{ secrets.DEV_ROLE }}
           STAGING_ACCOUNT_ID: ${{ secrets.STAGING_ACCOUNT_ID }}
           STAGING_ROLE: ${{ secrets.STAGING_ROLE }}
           PRODUCTION_ACCOUNT_ID: ${{ secrets.PRODUCTION_ACCOUNT_ID }}
