fix test change

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,7 @@ jobs:
           setup-terragrunt: true
           terragrunt-version: 0.52.4
         env:
+          DIGGER_GITHUB_TOKEN: ${{ secrets.DIGGER_GITHUB_TOKEN }}
           GITHUB_CONTEXT: ${{ toJson(github) }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEV_ACCOUNT_ID: ${{ secrets.DEV_ACCOUNT_ID }}
