--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -15,8 +15,7 @@ jobs:
         command: "digger destroy"
         project: "${{ inputs.project }}"
         setup-aws: true
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-role-to-assume: ${{ secrets.AWS_ROLE }}
         aws-region: us-east-1
         setup-terragrunt: true
         terragrunt-version: 0.52.4
