fix: destroy action add permission id-token

--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   destroy:
     runs-on: ubuntu-latest
+    permissions:    
+      id-token: write      # This is required for aws oidc connection
     steps:
     - name: digger destroy
       uses: diggerhq/digger@v0.2.2
