--- a/.github/workflows/drift.yml
+++ b/.github/workflows/drift.yml
@@ -3,7 +3,7 @@ name: Digger Terragrunt Drift Detection
 on:  
   workflow_dispatch:
   schedule: ## Schedule the job to run at 12.am daily.
-    - cron: '0 0 * * *'
+    - cron: '0 0 * * 0'
 
 jobs:
   detect-drift:
